--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 					<h3>Magnam aliquam</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis labore qui est voluptatibus dolorem, provident aliquam quia omnis ipsum laboriosam.</p>
 				</div>
-				<div class="col-md-4 col-xs-4"><img src="images/staff1.jpg" alt=""></div>
+				<div class="col-md-4 col-xs-4 imgstaff"><img src="images/staff1.jpg" alt=""></div>
 			</div>
 			<div class="col-md-6 col-xs-6">
-				<div class="col-md-4 col-xs-4"><img src="images/staff2.jpg" alt=""></div>
+				<div class="col-md-4 col-xs-4 imgstaff"><img src="images/staff2.jpg" alt=""></div>
 				<div class="col-md-8 col-xs-8 right-staff">
 					<h3>Magnam aliquam</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, similique, laudantium. Sapiente facilis dolore, rerum nostrum consequuntur recusandae earum quidem!</p>
@@ -110,10 +110,10 @@
 					<h3>Magnam aliquam</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, similique, laudantium. Sapiente facilis dolore, rerum nostrum consequuntur recusandae earum quidem!</p>
 				</div>
-				<div class="col-md-4 col-xs-4"><img src="images/staff3.jpg" alt=""></div>
+				<div class="col-md-4 col-xs-4 imgstaff"><img src="images/staff3.jpg" alt=""></div>
 			</div>
 			<div class="col-md-6 col-xs-6">
-				<div class="col-md-4 col-xs-4"><img src="images/staff4.jpg" alt=""></div>
+				<div class="col-md-4 col-xs-4 imgstaff"><img src="images/staff4.jpg" alt=""></div>
 				<div class="col-md-8 col-xs-8 right-staff">
 					<h3>Magnam aliquam</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, similique, laudantium. Sapiente facilis dolore, rerum nostrum consequuntur recusandae earum quidem!</p>
