quick minor updates

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Judo</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<script type="text/javascript"src="bower_components/jquery/dist/jquery.js"></script>
-	<script type="text/javascript"src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
+	<script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
 	<script type="text/javascript" src="js/query.js"></script>
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
 </head>
 <body>
 <header>
@@ -192,42 +191,42 @@
 	<div class="container services">
 		<h2 class="text-center">Services</h2>
 		<div class="col-md-6">
-			<div class="col-md-3 col-xs-3"><span class="glyphicon glyphicon-screenshot"></div>
+			<div class="col-md-3 col-xs-3"><span class="glyphicon glyphicon-screenshot"></span></div>
 			<div class="col-md-9 col-xs-9">
 				<h3>cum soluta nobis est eligendi</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta debitis deleniti ipsum suscipit. Necessitatibus deleniti veniam numquam fuga quam adipisci?</p>
 			</div>
 		</div>
 		<div class="col-md-6">
-			<div class="col-md-3 col-xs-3"><span class="glyphicon glyphicon-user"></div>
+			<div class="col-md-3 col-xs-3"><span class="glyphicon glyphicon-user"></span></div>
 			<div class="col-md-9 col-xs-9">
 				<h3>cum soluta nobis est eligendi</h3>
 				<p>Sit, veniam, recusandae? Facilis, debitis totam ab, ad est similique. Autem distinctio, inventore saepe. Eligendi et facilis, eos ex soluta.</p>
 			</div>
 		</div>
 		<div class="col-md-6">
-			<div class="col-md-3 col-xs-3"><span class="glyphicon glyphicon-time"></div>
+			<div class="col-md-3 col-xs-3"><span class="glyphicon glyphicon-time"></span></div>
 			<div class="col-md-9 col-xs-9">
 				<h3>cum soluta nobis est eligendi</h3>
 				<p>Consectetur eos sapiente officia nisi, unde, laborum optio accusantium perferendis blanditiis esse harum eaque quia ad ut voluptates, quo culpa!</p>
 			</div>
 		</div>
 		<div class="col-md-6">
-			<div class="col-md-3 col-xs-3"><span class="glyphicon glyphicon-globe"></div>
+			<div class="col-md-3 col-xs-3"><span class="glyphicon glyphicon-globe"></span></div>
 			<div class="col-md-9 col-xs-9">
 				<h3>cum soluta nobis est eligendi</h3>
 				<p>Ratione ea numquam, officia soluta cupiditate nisi! Accusantium enim obcaecati totam illo perferendis dolorem quas culpa voluptate assumenda, vero maiores.</p>
 			</div>
 		</div>
 		<div class="col-md-6">
-			<div class="col-md-3 col-xs-3"><span class="glyphicon glyphicon-road"></div>
+			<div class="col-md-3 col-xs-3"><span class="glyphicon glyphicon-road"></span></div>
 			<div class="col-md-9 col-xs-9">
 				<h3>cum soluta nobis est eligendi</h3>
 				<p>Assumenda totam sequi laborum ipsum et accusantium, sint excepturi delectus, nisi facilis a, voluptates suscipit mollitia corrupti? Accusantium, asperiores, rem?</p>
 			</div>
 		</div>
 		<div class="col-md-6">
-			<div class="col-md-3 col-xs-3"><span class="glyphicon glyphicon-ok-sign"></div>
+			<div class="col-md-3 col-xs-3"><span class="glyphicon glyphicon-ok-sign"></span></div>
 			<div class="col-md-9 col-xs-9">
 				<h3>cum soluta nobis est eligendi</h3>
 				<p>Voluptatibus dolore ab labore modi nostrum expedita earum voluptates nihil, temporibus, ipsum laboriosam ut, adipisci molestiae voluptate, officia inventore unde.</p>
@@ -273,13 +272,13 @@
 		<div class="container">
 			<h2 class="text-center">How to find us</h2>
 			<div class="container map col-xs-10 col-xs-offset-1">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5562.315492147934!2d15.955187925903322!3d45.80809908527699!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x48ce899f14403a53!2sDom+sportova!5e0!3m2!1sen!2sin!4v1446355244012" width="100%" height="400" frameborder="0" allowfullscreen></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5562.315492147934!2d15.955187925903322!3d45.80809908527699!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x48ce899f14403a53!2sDom+sportova!5e0!3m2!1sen!2sin!4v1446355244012" height="400" allowfullscreen></iframe>
 			</div>
 		</div>
 		<div class="container contactus">
 			<h2 class="text-center ">Contact Us</h2>
 			<div class="col-md-7 col-xs-12">
-				<form action="">
+				<form action="#" method="post">
 					<div class="input-group">
 						<input type="text" value="Name" id="cu-name"><input type="email" value="E-mail" id="cu-email"><input type="text" value="Telephone" id="cu-tel">
 					</div>
@@ -295,7 +294,7 @@
 					<span class="glyphicon glyphicon-earphone"></span>
 					<p>+91 546 78913</p><br>
 					<span class="glyphicon glyphicon-envelope"></span>
-					<a href="mailto:joe@example.com?subject=feedback" "email me">joe@example.com</a><br>
+					<a href="mailto:joe@example.com?subject=feedback">joe@example.com</a><br>
 				</div>
 
 			</div>
